--- a/src/css/app.css
+++ b/src/css/app.css
@@ -30,6 +30,11 @@ body .backgroundImage {
   bottom: 0;
   left: 0;
   right: 0;
+  background-image: url("./wallpaper.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .flex {
@@ -596,7 +601,6 @@ body .backgroundImage {
   max-height: 100%;
   padding: 0 1% 0 2%;
 }
-.moreContent .content__container .content .addContent,
 .moreContent .content__container .content .blank,
 .moreContent .content__container .content .rssContainer,
 .moreContent .content__container .content .warning {
