--- a/views/addFeedForm.ejs
+++ b/views/addFeedForm.ejs
@@ -11,12 +11,17 @@
     <option value="">Choose a field</option>
     <option value="Add a feed">Add a feed</option>
     <option value="Weather forecast">Weather forecast</option>
+    <option value="Youtube search box">Youtube search box</option>
   </select>
   <div class="addContent__feed">
     <input type="text" name="addContent__feed__input" class="addContent__feed__input" placeholder="Enter a RSS feed URL">
   </div>
   <div class="addContent__weather">
     <input type="text" name="addContent__weather__input" class="addContent__weather__input" placeholder="Enter a location">
+  </div>
+  <div class="addContent__youtube">
+    <p class="addContent__youtube__msg">Nothing to do here !</p>
+    <p class="addContent__youtube__msg">Just click on the green button below <br>and you're all set, dude ! 😉</p>
   </div>
   <div class="addContent__btnContainer">
     <button class="addContent__cancelBtn">Bring me back !</button>
