--- a/views/addFeedForm.ejs
+++ b/views/addFeedForm.ejs
@@ -20,8 +20,8 @@
     <input type="text" name="addContent__weather__input" class="addContent__weather__input" placeholder="Enter a location">
   </div>
   <div class="addContent__youtube">
-    <p class="addContent__youtube__msg">Nothing to do here !</p>
-    <p class="addContent__youtube__msg">Just click on the green button below <br>and you're all set, dude ! 😉</p>
+    <p class="addContent__youtube__msg flex">Nothing to do here !</p>
+    <p class="addContent__youtube__msg flex">Just click on the green button below <br>and you're all set, dude ! 😉</p>
   </div>
   <div class="addContent__btnContainer">
     <button class="addContent__cancelBtn">Bring me back !</button>
