--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,10 +14,6 @@
   <div class="wrapper flex">
     <main class="mainContainer flex">
       <header class="header">
-        <svg class="header__searchBtn" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#f8f4f4" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-          <circle cx="11" cy="11" r="8"></circle>
-          <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-        </svg>
         <svg class="header__converterBtn" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#ffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
           <path d="M17 2.1l4 4-4 4" />
           <path d="M3 12.2v-2a4 4 0 0 1 4-4h12.8M7 21.9l-4-4 4-4" />
@@ -137,6 +133,11 @@
       </div>
     </div>
     <div class="rssTooltip flex"></div>
+    <div class="confirmation flex">
+      <div class="confirmation__child flex">
+        <p>Hello world!</p>
+      </div>
+    </div>
     <footer class="footer flex">
       <span class="icon">̿̿ ̿̿ ̿̿ ̿'̿'\̵͇̿̿\з= ( ▀ ͜͞ʖ▀) =ε/̵͇̿̿/’̿’̿ ̿ ̿̿ ̿̿ ̿̿</span>
       <span class="credits flex">
